# pylockglyph-artifact

artifact/: BENCHMARK.md  EXCLUSIONS.md  METHOD.md  Makefile  README.md  REPLAY.md  USAGE.md  requirements.txt  run_replay.sh
artifact/data/corpus/subjects/uv_fasttrackpy_01d3fdf/: PROVENANCE.md  acquisition.json  pyproject.toml
artifact/evidence/: adversarial_vectors.csv  baseline_contract_summary.json  benchmark_scope_contract_summary.json  certificate_truth_table.csv  claim_scope_summary.json  command_surface_summary.json  consumer_baseline_matrix.csv  consumer_baseline_summary.csv  controlled_outcomes.csv  corpus_capsule_audit.csv  corpus_diversity_summary.json  executable_mutations.csv  external_disagreement_analysis.md  external_validation_results.csv  external_validation_summary.json  file_removals.csv  formatting_cases.csv  independent_parser_audit.csv  known_limitations.md  manager_profile_summary.csv  metamorphic_cases.csv  missing_obligations.csv  negative_control_provenance.md  negative_control_summary.json  overfitting_sentinel_summary.json  package_records.csv  paper_audit_summary.json  profile_outcomes.csv  projection_disagreement.csv  projection_separation_witnesses.csv  projection_summary.csv  proof_obligations.json  replay_manifest.csv  replay_summary.json  repository_audit_summary.json  semantic_spotcheck_records.csv  study_summary.json  timing_summary.json  under_admission_analysis.csv  under_admission_summary.json  (+2 more)
artifact/pylockglyph/: __init__.py  audit.py  certificate.py  compat_toml.py  controls.py  corpus.py  io.py  model.py  parsers.py  projections.py  quality.py  scope.py  secondary.py  study.py  surface.py  theory.py  toml_writer.py
artifact/spec/: profiles.json  (+4 more)
paper/: main.tex  references.bib  supplement.tex
(+129 files in other folders)
