[project]
name = "fasttrackpy"
version = "0.6.1"
requires-python = ">=3.10,<3.14"
description = "A python implementation of FastTrack"
authors = [
  {name="Josef Fruehwald", email="JoFrhwld@gmail.com"},
  {name = "Santiago Barreda", email = "sbarreda@ucdavis.edu"}
]
license = "MIT"
readme = "README.md"
dependencies = [
    "aligned-textgrid>=0.8.1",
    "click>=8.3.1",
    "cloudpickle>=3.1.2",
    "cloup>=3.0.8",
    "filetype>=1.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numba>=0.61.0",
    "polars>=1.38.1",
    "praat-parselmouth>=0.4.7",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
]

[project.urls]
Homepage = "https://fasttrackiverse.github.io/fasttrackpy/"
Repository = "https://github.com/FastTrackiverse/fasttrackpy"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov-config=tests/.coveragerc",
    "--cov-report=xml",
    "--cov",
    "--log-cli-level=CRITICAL"
]
filterwarnings =[
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

pythonpath = "src"
testpaths = "tests"

[dependency-groups]
dev = [
    "altair>=6.0.0",
    "ipython>=8.38.0",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
]
docs = [
    "hvplot>=0.12.2",
    "ipython>=8.38.0",
    "jupyter>=1.1.1",
    "pyarrow>=23.0.0",
    "quartodoc>=0.11.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-datafiles>=3.0.1",
]

[project.scripts]
fasttrack = 'fasttrackpy.cli:fasttrack'
